--- a/rust/lance-core/Cargo.toml
+++ b/rust/lance-core/Cargo.toml
@@ -53,9 +53,12 @@ tokio.workspace = true
 tracing.workspace = true
 url.workspace = true
 uuid.workspace = true
+xxhash-rust = {version = "0.8", features = ["xxh3"]}
 
 [dev-dependencies]
 arrow = "47.0"
+criterion = { workspace = true }
+nohash-hasher.workspace = true
 rand.workspace = true
 tempfile.workspace = true
 lance-testing.workspace = true
@@ -68,3 +71,7 @@ prost-build.workspace = true
 [features]
 dynamodb = ["aws-sdk-dynamodb"]
 dynamodb_tests = ["dynamodb"]
+
+[[bench]]
+name = "row_address_hash"
+harness = false
