--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,6 +38,10 @@ jobs:
     defaults:
       run:
         working-directory: ./rust
+    env:
+      # Need up-to-date compilers for kernels
+      CC: gcc-12
+      CXX: g++-12
     steps:
       - uses: actions/checkout@v4
       - uses: Swatinem/rust-cache@v2
@@ -90,7 +94,7 @@ jobs:
         run: cargo fmt --check
       - name: Run tests
         run: |
-          cargo test -- --test-threads 1
+          cargo test --all-features -- --test-threads 1
   clippy:
     runs-on: ubuntu-22.04
     timeout-minutes: 30
